--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
         </ul>
       </div>
 
-      <div class="grid"></div>
-      <h2>Grid</h2>
-      <div class="grid-container"></div>
-      <img src="./Assets/Fonts/IMG/css-logo.png" alt="logo css" />
+      <div class="grid">
+        <h2>Grid</h2>
+        <div class="grid-container">
+          <img src="./Assets/Fonts/IMG/css-logo.png" alt="logo css" />
+          <!-- </div> -->
 
-      <form action=""></form>
-      <input type="text" id="firstname" placeholder="Prénom" />
-      <input type="text" id="surname" placeholder="Nom" />
-      <textarea cols="30" rows="10" placeholder="Ici Votre Message"></textarea>
-      <input type="submit" value="Valider" id="btn-submit" />
-
+          <form action="">
+            <input type="text" id="firstname" placeholder="Prénom" />
+            <input type="text" id="surname" placeholder="Nom" />
+            <textarea
+              cols="30"
+              rows="10"
+              placeholder="Ici Votre Message"
+            ></textarea>
+            <input type="submit" value="Valider" id="btn-submit" />
+          </form>
+        </div>
+      </div>
       <div class="absolute">
         <h2>Absolute</h2>
         <span id="circle1"></span>
